refactor: rename variables using lowerCamelCase, replace List.of() with Collections.emptyList()